<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">iFuture</string>
    <string name="please_input_mobile">请输入手机号码</string>
    <string name="get_validata_code">获取验证码</string>
    <string name="please_input_validata_code">请输入验证码</string>
    <string name="reset_password">重置密码</string>
    <string name="please_input_old_password">请输入旧密码</string>
    <string name="change_password">修改密码</string>
    <string name="reset_password_success">重置密码成功</string>
    <string name="change_passwrod_success">修改密码成功</string>
    <string name="logout">注销</string>
    <string name="clearCache">清除缓存</string>
    <string name="clearSystemMsg">清除系统消息</string>
    <string name="clearCacheHint">是否清除缓存？</string>
    <string name="clearSystemMsgHint">是否清除系统消息？</string>
    <string name="bind">绑定</string>
    <string name="bind_success">绑定成功</string>
    <string name="validata_code_not_empty">验证码不能为空！</string>
    <!-- 首页 -->
    <string name="system_message">消息</string>
    <string name="my_teacher">我的老师</string>
    <string name="my_score">我的成绩</string>
    <string name="my_datum">我的材料</string>
    <string name="my_plan">我的规划</string>
    <string name="my_choose_school">我的选校</string>
    <string name="my_writ">我的文书</string>

    <!-- 个人信息 -->
    <string name="userInfo">个人信息</string>
    <string name="userName">账号</string>
    <string name="belong_center">所属中心</string>
    <string name="mobile">手机　　</string>
    <string name="parent_mobile">父母手机</string>
    <string name="qq_str">ＱＱ　　</string>
    <string name="wechat_str">微信　　</string>
    <string name="email_str">邮箱　　</string>
    <string name="addr">地址　　</string>

    <!-- 我的老师 -->
    <string name="complain">投诉</string>
    <string name="praise">赞　</string>
    <string name="praised">已赞</string>

    <!-- 我的选校 -->
    <string name="university">大学：</string>
    <string name="project">项目：</string>
    <string name="webAddr">网址：</string>
    <string name="old_password_not_empty">新密码不能为空！</string>
    <string name="twice_password_unlikeness">两次输入的新密码不一致!</string>
    <string name="new_password_not_empty">新密码不能为空！</string>
    <string name="mobile_not_empty">手机号码不能为空</string>
    <string name="binded">已绑定</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="unbind_success">解绑成功</string>
    <string name="title_activity_system_feedback">SystemFeedbackActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="feedback_not_empty">反馈内容不能为空！</string>
    <string name="feedback_success">反馈成功</string>
    <string name="system_feedback">系统反馈</string>
    <string name="my_student">我的学生</string>
    <string name="study_abroad_info">留学讯息</string>
    <string name="past_student">过往学生</string>
    <string name="school_rank">学校排名</string>
    <string name="ad">广告</string>
    <string name="my_complain">我的投诉</string>
    <string name="complian_object">投诉对象：</string>
    <string name="choose_complain_teacher">选择投诉的老师</string>
    <string name="complain_details">投诉详情</string>
    <string name="proceed_student">进行学生</string>
    <string name="student_complain">学生投诉</string>
    <string name="student_praise">学生表扬</string>
    <string name="about">关于</string>
    <string name="complain_student">投诉学员：</string>

    <string name="sms_shared_body">iFuture下载地址：http://a.app.qq.com/o/simple.jsp?pkgname=com.meten.ifuture</string>
    <string name="share_title">美联智能留学平台iFuture</string>
    <string name="share_url">http://a.app.qq.com/o/simple.jsp?pkgname=com.meten.ifuture</string>
    <string name="share_content">美联智能留学平台iFuture http://a.app.qq.com/o/simple.jsp?pkgname=com.meten.ifuture</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>

</resources>
