<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/dp10"
    android:paddingLeft="@dimen/dp15"
    android:paddingRight="@dimen/dp15" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp20"
        android:background="@drawable/round_rect_bg"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/name_tv"
                style="@style/black_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="90dp"
                android:layout_marginTop="@dimen/dp10"
                android:text="Cathy 王悦" />

            <TextView
                android:id="@+id/mobile_tv"
                style="@style/light_gray_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/name_tv"
                android:layout_below="@id/name_tv"
                android:text="电话：17097226930" />


        </RelativeLayout>

        <View
            style="@style/divider_horizontal"
            android:layout_marginTop="@dimen/dp10" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <LinearLayout
                android:id="@+id/contract_ll"
                style="@style/my_student_item">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp13"
                    android:textColor="@color/black"
                    android:text="合同类型"/>
                <TextView
                    android:id="@+id/contract_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp10"
                    android:textColor="@color/light_gray_textcolor"
                    android:text="XX类型"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider"
                android:background="@drawable/dashed"/>
            <LinearLayout
                android:id="@+id/email_ll"
                style="@style/my_student_item">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp13"
                    android:textColor="@color/black"
                    android:text="@string/email_str"/>
                <TextView
                    android:id="@+id/email_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp10"
                    android:textColor="@color/light_gray_textcolor"
                    android:text="feng_33191@126.com"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider"
                android:background="@drawable/dashed"/>
            <LinearLayout
                android:id="@+id/qq_ll"
                style="@style/my_student_item">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp13"
                    android:textColor="@color/black"
                    android:text="@string/qq_str"/>
                <TextView
                    android:id="@+id/qq_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp10"
                    android:textColor="@color/light_gray_textcolor"
                    android:text="331917692"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider"
                android:background="@drawable/dashed"/>
            <LinearLayout
                android:id="@+id/center_ll"
                style="@style/my_student_item">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp13"
                    android:textColor="@color/black"
                    android:text="@string/belong_center"/>
                <TextView
                    android:id="@+id/center_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp10"
                    android:textColor="@color/light_gray_textcolor"
                    android:text="深圳"/>
            </LinearLayout>
            <View
                style="@style/divider_horizontal"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:id="@+id/mobile_ll"
                    style="@style/my_student_bottom"
                    android:background="@drawable/my_teacher_bottom_left_item"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="电话联系"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:drawablePadding="@dimen/dp5"
                        android:textSize="@dimen/sp13"
                        android:drawableLeft="@drawable/ic_my_teacher_phone"/>
                </LinearLayout>
                <View style="@style/divider_vertical" />


                <LinearLayout
                    android:id="@+id/wechat_ll"
                    style="@style/my_student_bottom"
                    android:background="@drawable/my_teacher_bottom_right_item"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="微信联系"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp13"
                        android:drawablePadding="@dimen/dp5"
                        android:drawableLeft="@drawable/ic_my_teacher_wechat"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <com.meten.ifuture.view.CircularImage
        android:id="@+id/head_img"
        android:layout_width="@dimen/headImgSize"
        android:layout_height="@dimen/headImgSize"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginTop="@dimen/dp5"
        android:src="@drawable/head_default" />

</RelativeLayout>